Progressing in implementation of login and registration
