# api/api_vc.go
@@ -2,19 +2,25 @@ package api
 
 import (
 	"net/http"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 	"github.com/mailio/go-mailio-core/did"
+	coreErrors "github.com/mailio/go-mailio-core/errors"
 	"github.com/mailio/go-mailio-server/global"
+	"github.com/mailio/go-mailio-server/services"
 	"github.com/mailio/go-mailio-server/types"
 )
 
 type VC struct {
+	ssiService *services.SelfSovereignService
 }
 
 // new verifiable credential api
-func NewVCApi() *VC {
-	return &VC{}
+func NewVCApi(ssiService *services.SelfSovereignService) *VC {
+	return &VC{
+		ssiService: ssiService,
+	}
 }
 
 // Get a verifiable credential by id
@@ -33,8 +39,16 @@ func (vc *VC) GetVC(c *gin.Context) {
 		ApiErrorf(c, http.StatusBadRequest, "id is required")
 		return
 	}
-	newVc := did.NewVerifiableCredential("todo:finish:this")
-	c.JSON(http.StatusOK, newVc)
+	output, err := vc.ssiService.GetVCByID(id)
+	if err != nil {
+		if err == coreErrors.ErrNotFound {
+			ApiErrorf(c, http.StatusNotFound, "vc not found")
+			return
+		}
+		ApiErrorf(c, http.StatusInternalServerError, "error getting vc")
+		return
+	}
+	c.JSON(http.StatusOK, output)
 }
 
 func (vc *VC) UpdateVC(c *gin.Context) {
@@ -79,4 +93,35 @@ func (vc *VC) VerifyVC(c *gin.Context) {
 func (vc *VC) RevokeVC(c *gin.Context) {
 	// TODO! unfinished implementation
 	c.JSON(http.StatusNotImplemented, gin.H{"error": "not implemented"})
+}
+
+// List of VCs
+// @Summary List all VCs for a specific mailio address
+// @Description Retruns a list of VCs by mailio address
+// @Tags Verifiable Credentials
+// @Security Bearer
+// @Param address path string true "Mailio address"
+// @Param limit query int false "Limit of VCs to return"
+// @Param pageToken query string false "Page token"
+// @Success 200 {object} did.Document
+// @Failure 500 {object} api.ApiError "error creating server did"
+// @Accept json
+// @Produce json
+// @Router /api/v1/credentials/{address}/list [get]
+func (vc *VC) ListVCs(c *gin.Context) {
+	limitStr := c.Query("limit")
+	address := c.Param("address")
+	pageToken := c.Param("pageToken")
+
+	limit, err := strconv.Atoi(limitStr)
+	if err != nil {
+		ApiErrorf(c, http.StatusBadRequest, "invalid limit")
+		return
+	}
+	output, err := vc.ssiService.ListSubjectVCs(address, limit, pageToken)
+	if err != nil {
+		ApiErrorf(c, http.StatusInternalServerError, "error listing vcs")
+		return
+	}
+	c.JSON(http.StatusOK, output)
 }
