# docs/swagger.yaml
@@ -176,6 +176,28 @@ definitions:
       rev:
         type: string
     type: object
+  types.InputLogin:
+    properties:
+      ed25519SigningPublicKeyBase64:
+        description: public key of the private key used to sign the nonce
+        type: string
+      email:
+        type: string
+      mailioAddress:
+        description: Password                      string `json:"password,omitempty"`
+        type: string
+      nonce:
+        type: string
+      signatureBase64:
+        description: signature of Nonce string
+        type: string
+    required:
+    - ed25519SigningPublicKeyBase64
+    - email
+    - mailioAddress
+    - nonce
+    - signatureBase64
+    type: object
   types.InputRegister:
     properties:
       databasePassword:
@@ -300,6 +322,41 @@ paths:
       summary: Resolve users DID document
       tags:
       - Decentralized Identifiers
+  /api/v1/credentials/{address}/list:
+    get:
+      consumes:
+      - application/json
+      description: Retruns a list of VCs by mailio address
+      parameters:
+      - description: Mailio address
+        in: path
+        name: address
+        required: true
+        type: string
+      - description: Limit of VCs to return
+        in: query
+        name: limit
+        type: integer
+      - description: Page token
+        in: query
+        name: pageToken
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/did.Document'
+        "500":
+          description: error creating server did
+          schema:
+            $ref: '#/definitions/api.ApiError'
+      security:
+      - Bearer: []
+      summary: List all VCs for a specific mailio address
+      tags:
+      - Verifiable Credentials
   /api/v1/credentials/{id}:
     get:
       consumes:
@@ -470,11 +527,12 @@ paths:
       - application/json
       description: Returns a JWS token
       parameters:
-      - description: Nonce string
-        in: query
-        name: nonce
+      - description: login input
+        in: body
+        name: login
         required: true
-        type: string
+        schema:
+          $ref: '#/definitions/types.InputLogin'
       produces:
       - application/json
       responses:
@@ -482,6 +540,18 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/types.JwsToken'
+        "400":
+          description: Invalid or missing input parameters
+          schema:
+            $ref: '#/definitions/api.ApiError'
+        "401":
+          description: Invalid signature
+          schema:
+            $ref: '#/definitions/api.ApiError'
+        "403":
+          description: Failed to login (valid signature, no valid VC)
+          schema:
+            $ref: '#/definitions/api.ApiError'
       summary: Login with username and password
       tags:
       - User Account
@@ -497,6 +567,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/types.NonceResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/api.ApiError'
       summary: Login and Registration challenge nonce
       tags:
       - User Account
@@ -519,6 +593,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/types.JwsToken'
+        "401":
+          description: Invalid signature
+          schema:
+            $ref: '#/definitions/api.ApiError'
         "404":
           description: Invalid input parameters
           schema:
